import {
  type SettingsDataModelObjectAboutFormValues,
  settingsDataModelObjectAboutFormSchema,
} from '@/settings/data-model/validation-schemas/settingsDataModelObjectAboutFormSchema';
import { type EachTestingContext } from 'twenty-shared/testing';

describe('settingsDataModelObjectAboutFormSchema', () => {
  const validInput: SettingsDataModelObjectAboutFormValues = {
    color: 'gray',
    description: 'A valid description',
    icon: 'IconName',
    labelPlural: 'Labels Plural',
    labelSingular: 'Label Singular',
    namePlural: 'labelsPlural',
    nameSingular: 'labelSingular',
    isLabelSyncedWithName: false,
  };

  const passingTestsUseCase: EachTestingContext<{
    input: SettingsDataModelObjectAboutFormValues;
    expectedSuccess: true;
  }>[] = [
    {
      title: 'validates a complete valid input',
      context: {
        input: validInput,
        expectedSuccess: true,
      },
    },
    {
      title: 'validates input with optional fields omitted',
      context: {
        input: {
          labelPlural: 'Labels Plural',
          labelSingular: 'Label Singular',
          namePlural: 'labelsPlural',
          nameSingular: 'labelSingular',
          isLabelSyncedWithName: false,
        },
        expectedSuccess: true,
      },
    },
    {
      title: 'validates input with trimmed labels',
      context: {
        input: {
          ...validInput,
          labelPlural: '   Labels Plural   ',
          labelSingular: '  Label Singular  ',
        },
        expectedSuccess: true,
      },
    },
    {
      title: 'validates input with identical labels but different names',
      context: {
        input: {
          ...validInput,
          labelSingular: 'Sheep',
          labelPlural: 'Sheep',
          nameSingular: 'sheep',
          namePlural: 'sheeps',
        },
        expectedSuccess: true,
      },
    },
    {
      title: 'validates Persian labels with an explicit technical name',
      context: {
        input: {
          ...validInput,
          labelSingular: 'همایش',
          labelPlural: 'همایش‌ها',
          nameSingular: 'academyEvent',
          namePlural: 'academyEvents',
        },
        expectedSuccess: true,
      },
    },
  ];

  const failsValidationTestsUseCase: EachTestingContext<{
    input: Partial<Record<keyof SettingsDataModelObjectAboutFormValues, any>>;
    expectedSuccess: false;
  }>[] = [
    {
      title: 'fails when required fields are missing',
      context: {
        input: {
          description: 'Only description',
          labelPlural: undefined,
          labelSingular: undefined,
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when names are not in camelCase',
      context: {
        input: {
          ...validInput,
          namePlural: 'Labels_Plural',
          nameSingular: 'Label-Singular',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when Persian labels have no technical name',
      context: {
        input: {
          ...validInput,
          labelSingular: 'همایش',
          labelPlural: 'همایش‌ها',
          nameSingular: '',
          namePlural: '',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when technical names contain non-Latin letters',
      context: {
        input: {
          ...validInput,
          nameSingular: 'همایش',
          namePlural: 'hmyshها',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when technical names start with a digit',
      context: {
        input: {
          ...validInput,
          nameSingular: '2event',
          namePlural: '2events',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when technical names are reserved',
      context: {
        input: {
          ...validInput,
          nameSingular: 'search',
          namePlural: 'searches',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when labels are empty strings',
      context: {
        input: {
          ...validInput,
          labelPlural: '',
          labelSingular: '',
        },
        expectedSuccess: false,
      },
    },
    {
      title:
        'fails when singular and plural labels are the same and names are the same',
      context: {
        input: {
          ...validInput,
          labelPlural: 'Same Label',
          labelSingular: 'Same Label',
          namePlural: 'sameName',
          nameSingular: 'sameName',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when singular and plural names are the same',
      context: {
        input: {
          ...validInput,
          namePlural: 'sameName',
          nameSingular: 'sameName',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when isLabelSyncedWithName is not a boolean',
      context: {
        input: {
          ...validInput,
          isLabelSyncedWithName: 'true',
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails with invalid types for optional fields',
      context: {
        input: {
          ...validInput,
          description: 123,
          icon: true,
        },
        expectedSuccess: false,
      },
    },
    {
      title: 'fails when color is not a valid theme color',
      context: {
        input: {
          ...validInput,
          color: 'not-a-color',
        },
        expectedSuccess: false,
      },
    },
  ];

  test.each([...passingTestsUseCase, ...failsValidationTestsUseCase])(
    '$title',
    ({ context: { expectedSuccess, input } }) => {
      const result = settingsDataModelObjectAboutFormSchema.safeParse({
        ...validInput,
        ...input,
      });
      expect(result.success).toBe(expectedSuccess);
      if (!expectedSuccess) {
        expect(result.error).toMatchSnapshot();
      }
    },
  );
});
